paragrafos, quebras, simbolos e emoji

--- a/ex002/index.html
+++ b/ex002/index.html
@@ -14,5 +14,31 @@
         basta coloca tudo no meio do p e /p que vai sair retinho no site o que importa é a marcação &lt;p&gt; e &lt;/p&gt; 
     </p>
     <p>se precisar quebrar o texto em algum lugar especifico como esse <br> voce pode usar a tag &lt;br&gt;.</p>
+    <h2>gambiarra pra quebrar linhas: digita varias vezes o &lt;br&gt;</h2>
+    <br><br><br><br>
+    <p>isso está errado. </p>
+    <p> comentario: < !----> tudo junto <br> <!-- Olá--> <br>
+        & l t significa: less than(menor que) <br>
+        & g t significa greatr than(maior que)
+    </p>
+<p>
+    vamos adicionar alguns simbolos especiais:
+    &reg;
+    &copy;
+    &trade;
+    &euro;
+    &pound;
+    &yen;
+    &cent;
+    &delta;
+    &Delta;
+    &uparrow;
+    &downarrow;
+</p>
+<p> vamos adicionar alguns emojis
+    O SIMBOLO COM EMOJI SEMPRE COMEÇA ASSIM: & # x + o codigo hexadecimal, como no exemplo: <br>
+    &#x1F596;
+    &#x1F913;
+</p>
 </body>
 </html>
