colocando imagens em sites

--- a/ex002/index.html
+++ b/ex002/index.html
@@ -34,6 +34,7 @@
     &Delta;
     &uparrow;
     &downarrow;
+    &rarr;
 </p>
 <p> vamos adicionar alguns emojis
     O SIMBOLO COM EMOJI SEMPRE COMEÇA ASSIM: & # x + o codigo hexadecimal, como no exemplo: <br>
