--- a/exc009/index.html
+++ b/exc009/index.html
@@ -4,59 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OUtras Formatações</title>
+    <title>Listas</title>
 </head>
 <body>
-    <h1>Outras Fortamações</h1>
-    <h2>código fonte/pre-formatação</h2>
-    <p>o comando <code>document.getElementById('teste')</code> é escrito em linguagem javaScript usando a fonte monoespaçada que deixa o mesmo espaço entre as letras,  com o comando < code></p>
-    <code>
-        num = int(input('Digite um numero'))
-        if num % 2 == 0:
-                print(f'0 numero {num} é PAR')
-        else:
-            print(f'O número {num} é IMPAR')    
-            print('Fim do programa')    
-    </code>
-    <p>o comando code nao faz identação no código escrito, mas se enveloparmos toda a tag code dentro de uma tag < pre>, ja dá certo, por que a tag pre vai considerar tudo(espaço, quebra de linha...) exemplo abaixo:</p>
-    <pre>
-        <code>
-            num = int(input('Digite um numero'))
-            if num % 2 == 0:
-                    print(f'0 numero {num} é PAR')
-            else:
-                print(f'O número {num} é IMPAR')    
-                print('Fim do programa')    
-        </code>
-    </pre>
-    <p>apertando a tecla shit+tab dentro da tag pre o codigo fica alinhado à esquerda:</p>
-    <pre>
-        <code>
-num = int(input('Digite um numero'))
-if num % 2 == 0:
-        print(f'0 numero {num} é PAR')
-else:
-    print(f'O número {num} é IMPAR')    
-print('Fim do programa')    
-        </code>
-    </pre>
-    <h2>Citações:</h2>
-    <p>como diria o pai de um amigo: <q>o computador é um burro muito rápido</q>, posso colocar as citações com a tag < q> que segnifica quote(citação)</p>
-    <h2>Citações completas:</h2>
-    <p>segundo fulano: no seu livro blablabla:</p>
-    <blockquote>
-        Hypertexto é todo texto inserido em um documento para web
-    </blockquote>
-    <p>aqui usei a tag < blockquote> que desloca a citação ainda posso colocar o link do endereço que vai ajudar o google a saber que essa frase referencia o livro: 
-        <br>
-        < blockquote <mark>cite="https://www.google.com.br/books/edition/Fundamentos_de_HTML5_e_CSS3/2iPYCQAAQBAJ?hl=pt-BR&gbpv=1&dq=html&printsec=frontcover"</mark>>
-        Hypertexto é todo texto inserido em um documento para web
-    </blockquote>
-    </p>
-    <h2>Abreviações:</h2>
-    <p>estou estudando <abbr title="Hypertext Markup Language">html</abbr> e <abbr title="Cascading Style Sheets">css</abbr>. ele ja da a opção do que vai ficar na caixinha de comentario: < abbr title="Hypertext Markup Language">html</abbr> </p>
-    <h2>Texto invertido:</h2>
-    <p><bdo dir="rtl"> estou aprendendo a criar coisas em html</bdo>. voce pode escolher a direcao do texto: < <mark>bdo dir="rtl"</mark>(rtl=> right to left)</bdo>)></bdo></p>
-    
+    <h1>Trabalhando com listas</h1>
+    <h2>listas ordenadas)</h2>
+    <p>tag OL(order list=> lista ordenada)</p>
+    <p>tag LI(list item=> item da lista)</p>
+    <ol>
+        <li>acordar
+        <li>tomar café
+        <li>escovar os dentes
+    </ol>
+    <p>a lista ordenada(ol) pode ser alterada que a ordem se organiza sozinha</p>
+    <h3>personalizando listas ordenadas:</h3>
+    <p>tag Ol + type="..."</p>
+    <ol type="i">
+        <li>acordar
+            <li>ligar pro joao</li>
+        <li>tomar café
+        <li>escovar os dentes
+        <li>ir para a faculdade</li>
+        <li>almoçar</li>
+        <li>ir para o trabalho</li>
+        <li>voltar para casa</li>
+        <li>jantar</li>
+        <li>dormir</li>
+    </ol>
+    <h2>Lista Nao Ordenada</h2>
+    <p>listas onde a sequencia nao é necessária</p>
+    <p>tag: ul(undorder list)</p>
+    <ul>
+        <li>pao</li>
+        <li>leite</li>
+        <li>tomate</li>
+        <li>manteiga</li>
+        <li>arroz</li>
+        <li>feijao</li>
+    </ul>
+    <h3>personalizando listas nao ordenadas:</h3>
+    <p>tag ul + type="disc" ou "circle" ou "square"</p>
+    <ul type="circle">
+        <li>pao</li>
+        <li>leite</li>
+        <li>tomate</li>
+        <li>manteiga</li>
+        <li>arroz</li>
+        <li>feijao</li>
+    </ul>
 </body>
 </html>
