Listas OL, UL, mistas e de definição

--- a/exc009/index.html
+++ b/exc009/index.html
@@ -52,5 +52,78 @@
         <li>arroz</li>
         <li>feijao</li>
     </ul>
+    <h1>Juntando Listas 1</h1>
+    <h2>minhas linguagens favoritas:</h2>
+    <ol>
+        <li>antigas</li>
+        <ol type ="a">
+            <li>Cliper</li>
+            <li>Visual Basic</li>
+            <li>Fortran</li>
+            <li>Delphi</li>
+        </ol>
+        <li>Novas</li>
+        <ol type="a" start="5">
+            <li>
+                <li>PHP</li>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <Li>Kotlin</Li>
+            </li>
+        </ol>
+    </ol>
+    <p>a sequencia alfabetica aconteceu por isso: < ol type="a" start="5"></ol>, start 5 = letra e</p>
+    <h2>Meus Jogos Favoritos:</h2>
+    <ol>
+        <li>NES</li>
+        <ol>
+            <li>Mario Bros</li>
+            <li>Ninja Gaiden</li>
+        </ol>
+        <li>SNES</li>
+        <ol>
+            <li>Mario</li>
+            <li>Donkey Kong</li>
+        </ol>
+        <li>PlayStation</li>
+        <ol>
+            <li>Final Fantasy</li>
+            <li>Castlevania</li>
+        </ol>
+    </ol>
+    <h3>mudar de ol pra ul:</h3>
+    <p>macete: clica depois o (em ol) segurando o alt apaga e coloca o u, muda todos ao mesmo tempo:</p>
+    <ol>
+        <li>NES</li>
+        <ul type="square">
+            <li>Mario Bros</li>
+            <ul type="circle">
+                <li>Mario Bros 3</li>
+                <li>Mario: Lost Levels</li>
+            </ul>
+            <li>Ninja Gaiden</li>
+        </ul>
+        <li>SNES</li>
+        <ul type="square">
+            <li>Mario</li>
+            <li>Donkey Kong</li>
+        </ul>
+        <li>PlayStation</li>
+        <ul type="square">
+            <li>Final Fantasy</li>
+            <li>Castlevania</li>
+        </ul>
+    </ol>
+    <h2>Lista de Definição</h2>
+    <p>tags: <br> dl: definition list <br> dt: definição termo<br> dd: descrição definição</p>
+    <dl>
+        <dt>HTML</dt>
+        <dd>LInguagem de marcação para a criação do conteúdo de um site</dd>
+        <dt>CSS</dt>
+        <dd>LInguagem de marcação para a criação do desing de um site</dd>
+        <dt>JavaScript</dt>
+        <dd>Linguagem de programação para a criação da interatividade de um site.</dd>
+    </dl>
+
 </body>
 </html>
