--- a/exc010/index.html
+++ b/exc010/index.html
@@ -10,5 +10,14 @@
     <p>voce pode acessar o meu <a href="https://gustavoguanabara.github.io" target="_blank">repositório publico no GitHub</a> </p>
     <p>voce tambem pode acessar o meu <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external">canal gratuito no youtube</a> <br>
         <strong>obs: vai abrir numa nova aba por conta do target = "_blank" rel = "external"</strong></p>
+        <h2>Usando links internos acessando páginas</h2>
+        <p>navega entre paginas do site/servidor</p>
+        <p>essa é a primeira pagina, voce pode ir pra segunda pagina <a href="pag002.html" target="_self" rel="next">clicando aqui</a></p>
+        <p></p>
+        <p>rel="next" dentro do link ajuda a gerar um sistema de navegação dentro do site</p>
+        <p>pra funcionar, as paginas precisam estár no mesmo diretório</p>
+        <p>voce tambem pode acessar minha <a href="noticias/pag003.html" target="_self" rel="next">pagina de noticias</a></p>
+        <p>target="_self" => target especifico pra propria pagina pra nao abrir em nova aba, ja que eu estou dentro do meu proprio site.</p>
+
 </body>
 </html>
