links: ancoras, links externos e internos, link p download

--- a/exc010/index.html
+++ b/exc010/index.html
@@ -18,6 +18,11 @@
         <p>pra funcionar, as paginas precisam estár no mesmo diretório</p>
         <p>voce tambem pode acessar minha <a href="noticias/pag003.html" target="_self" rel="next">pagina de noticias</a></p>
         <p>target="_self" => target especifico pra propria pagina pra nao abrir em nova aba, ja que eu estou dentro do meu proprio site.</p>
+        <h1>Links para downloads</h1>
+        <ul>
+            <li><a href="livro/10 - Ligações em toda parte.pdf" download="10 - Ligações em toda parte.pdf" type="application/pdf">Baixar o livro em pdf</a></li>
+            <li><a href="livro/10 - Ligações em toda parte.zip" download="10 - Ligações em toda parte.zip" type="application/zip">Livro compactado em ZIP</a></li>
+        </ul>
 
 </body>
 </html>
