--- a/exc 011/index.html
+++ b/exc 011/index.html
@@ -15,5 +15,17 @@
         <source media="(max-width: 1050px )" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="imagem flexivel">
     </picture>
+
+    <h1>Reproduzindo Áudio</h1>
+    <p>vamos aprender a reproduzir áudios em HTML5</p>
+    <audio preload="metadata" autoplay controls loop>
+        <!--tipos de audios p ser compativel com vários navegados(respeitar a ordem)-->
+    <source src="midia/guanacast-33.mp3" type="audio/mpeg">
+    <source src="midia/guanacast-33.ogg" type="audio/ogg">
+    <source src="midia/guanacast-33.wav" type="audio/wav">
+    <p>infelizmente seu navegador não consegue reproduzir audio</p>
+    <a href="midia/happy-mistake.mp3"> clice aqui para baixar o arquivo mp3</a>
+    </audio>
+   
 </body>
 </html>
