--- a/exc 012/index.html
+++ b/exc 012/index.html
@@ -9,13 +9,18 @@
 <body>
     <h1>Inserindo videos hospedados localmente</h1>
     <p>este video está hospedado no meu próprio servidor</p>
-   <video width="500" poster="imagens/limoes.png" controls>
+   <video width="560" poster="imagens/limoes.png" controls loop>
     <source src="midia/meu-video.m4v" type="video/m4v">
     <source src="midia/meu-video.ogv" type="video/ogv">
     <source src="midia/meu-video.webm" type="video/webm">
     <source src="midia/meu-video.mp4" type="video/mp4">
     <p>seu navegador não é compativel com videos</p>
-
    </video>
+
+   <h1>Inserindo videos do youtube</h1>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <h1>Inserindo videos do vimeo: </h1>
+   <iframe src="https://player.vimeo.com/video/29844795?h=f0a1764666&autoplay=1&loop=1&color=ff9933&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
